--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jasbirsingh212/complete-backend-developer#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "validator": "^13.7.0"
   }
 }
