--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/jasbirsingh212/complete-backend-developer#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
