--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "validator": "^13.9.0"
+    "chalk": "^2.4.2",
+    "validator": "^13.9.0",
+    "yargs": "^12.0.5"
   }
 }
